k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-redirect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-redirect
  template:
    metadata:
      labels:
        app: nginx-redirect
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
