k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-redirect
spec:
  selector:
    app: nginx-redirect
  ports:
    - port: 80
      targetPort: 8080
