k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-redirect
spec:
  to:
    kind: Service
    name: nginx-redirect
  port:
    targetPort: 80
  tls:
    termination: edge
